# water_full_web_app

./: .env  Cargo.toml  LICENSE  README.md
data_holder/: Cargo.toml
data_holder/src/: lib.rs
db/: Cargo.toml
db/src/: lib.rs
db/src/models/: mod.rs  user.rs
frontend/: Cargo.toml
frontend/public/MainTemplate/assets/bundles/: gmaps.js
frontend/public/MainTemplate/assets/bundles/amcharts4/: core.js
frontend/public/MainTemplate/assets/bundles/bootstrap-daterangepicker/: daterangepicker.js
frontend/public/MainTemplate/assets/bundles/codemirror/lib/: codemirror.js
frontend/public/MainTemplate/assets/bundles/echart/: echarts.js
frontend/public/MainTemplate/assets/bundles/summernote/: summernote-bs4.js
frontend/public/MainTemplate/assets/css/: app.min.css  components.css  style.css
frontend/public/MainTemplate/assets/js/page/: index.js
frontend/src/: lib.rs
frontend/src/controllers/: home.rs  mod.rs  profile.rs
frontend/src/models/: mod.rs
frontend/src/models/auth/: mod.rs
frontend/src/models/helper/: mod.rs
frontend/src/models/home/: mod.rs
frontend/src/models/layout/: mod.rs
frontend/src/models/sidebar/: mod.rs
frontend/templates/MainTemplate/Layout/: main_layout.html.hbs  profile.hbs  sidebar.hbs
frontend/templates/UI/Home/: home.html.hbs
frontend/templates/UI/auth/: auth.html.hbs
redis_service/: .gitignore  Cargo.toml  run_redis.sh
redis_service/src/: lib.rs
redis_service/src/models/: mod.rs
server/: Cargo.toml
server/src/: main.rs
