[workspace]
resolver = "2"

members = [
    "data_holder", "db",
    "frontend",
    "redis_service",
    "server"
]



[workspace.dependencies]
tokio = {version = "1.48.0",features = ["full"]}
water_http = {version = "4.0.3",features = ["use_only_http1"],path = "/Users/hassansharara/work/projects/rust/h_crates/water/water_http"}
yarte = {version = "0.15.7"}
dotenv = "0.15.0"
deadpool-redis = {version = "0.23.0"}
redis-macros = {version = "1.0.1"}
redis = {version = "1.2.4"}
serde_json = {version = "1.0.150"}
serde= {version = "1.0.228",features = ["derive"]}
uuid = {version = "1.23.4",features = ["v4"]}
sqlx = {version = "0.8.0",features = ["runtime-tokio","macros","mysql"]}
bcrypt = {version =  "0.19" }
#urlencoding = {version =  "2.1.3" }
