[package]
name = "redis_service"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool-redis = {workspace = true}
dotenv = {workspace = true}
redis-macros = {workspace = true}
redis = {workspace = true}
uuid = {workspace = true}
serde_json = {workspace = true}
serde = { version = "1.0.228", features = ["derive"] }
db = {path = "../db"}